# libshvproto-rs

./: CODEOWNERS  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-reviewer.yml  dependabot-version-bump.yml  publish.yml  rust.yml
data/ci-coverage/: coverage.xml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/src/: afl_from_chainpack.rs  afl_from_cpon.rs  libfuzzer_from_chainpack.rs  libfuzzer_from_cpon.rs
fuzz/src/afl-in-from-chainpack/: 10  13  14  15  16  17  18  19  20  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  39  4  41  42  5  6  7  8  9
fuzz/src/afl-in-from-cpon/: 2  3
libshvproto-macros/: Cargo.toml  LICENSE
libshvproto-macros/src/: lib.rs
src/: chainpack.rs  cpon.rs  datetime.rs  decimal.rs  jaq.rs  json.rs  lib.rs  metamap.rs  reader.rs  rpcvalue.rs  serde.rs  textrdwr.rs  util.rs  writer.rs
src/serde/: de.rs  ser.rs
tests/: test.rs  test_cp2cp.rs
