workspace = { members = ["libshvproto-macros"] }

[package]
name = "shvproto"
version = "3.6.19"
edition = "2024"

[dependencies]
libshvproto-macros = { path = "./libshvproto-macros" }
log = "0.4"
chrono = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
simple_logger = { version = "5.0", features = ["stderr"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
shvproto = { path = ".", features = ["cp2cp"] }

[features]
cp2cp = ["dep:simple_logger"]
serde = ["dep:serde"]

# Enables feature `min_specialization` of nightly compiler and provides
# special `impl From<Collection<RpcValue>> for RpcValue` to just move
# the data without iterating through collections.
specialization = []

[[bin]]
name = "cp2cp"
required-features = ["cp2cp"]
