workspace = { members = ["libshvproto-macros"] }

[package]
name = "shvproto"
description = "Rust implementation of the SHV protocol"
license = "MIT"
repository = "https://github.com/silicon-heaven/libshvproto-rs"
version = "4.0.1"
edition = "2024"

[dependencies]
libshvproto-macros = { path = "./libshvproto-macros", version = "0.2.1" }
log = "0.4"
chrono = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
simple_logger = { version = "5.0", features = ["stderr"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
jaq-all = { git = "https://github.com/01mf02/jaq", tag = "v3.0.0-beta", optional = true }
# FIXME: remove this after jaq support is complete
fn_name = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0"
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
shvproto = { path = ".", features = ["cp2cp"] }

[features]
cp2cp = ["dep:simple_logger"]
serde = ["dep:serde"]
cq = ["dep:jaq-all"]

# Enables feature `min_specialization` of nightly compiler and provides
# special `impl From<Collection<RpcValue>> for RpcValue` to just move
# the data without iterating through collections.
specialization = []

[[bin]]
name = "cp2cp"
required-features = ["cp2cp"]
