workspace = { members = ["libshvproto-macros"] }

[package]
name = "shvproto"
description = "Rust implementation of the SHV protocol"
license = "MIT"
repository = "https://github.com/silicon-heaven/libshvproto-rs"
version = "6.0.0"
edition = "2024"

[dependencies]
libshvproto-macros = { path = "./libshvproto-macros", version = "0.2.1" }
log = "0.4"
chrono = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
simple_logger = { version = "5.0", features = ["stderr"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
jaq-all = { git = "https://github.com/01mf02/jaq", tag = "v3.0.0-beta", version = "0.1.0-beta", optional = true }
# FIXME: remove this after jaq support is complete
fn_name = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0"
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
shvproto = { path = ".", features = ["cp2cp"] }

[features]
cp2cp = ["dep:simple_logger"]
serde = ["dep:serde"]
cq = ["dep:jaq-all"]

# Enables feature `min_specialization` of nightly compiler and provides
# special `impl From<Collection<RpcValue>> for RpcValue` to just move
# the data without iterating through collections.
specialization = []

[[bin]]
name = "cp2cp"
required-features = ["cp2cp"]

[lints.clippy]
pedantic = {priority = -1, level = "warn"}

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
box_collection = "warn"
dbg_macro = "warn"
enum_variant_names = "warn"
equatable_if_let = "warn"
exit = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
iter_on_single_items = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
linkedlist = "warn"
map_err_ignore = "warn"
missing_assert_message = "warn"
needless_pass_by_ref_mut = "warn"
option-if-let-else = "warn"
option_option = "warn"
or_fun_call = "warn"
owned_cow = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_allocation = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_lit_as_bytes = "warn"
string_slice = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_box_returns = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unused_self = "warn"
unwrap_used = "warn"
upper_case_acronyms = "warn"
useless_let_if_seq = "warn"
vec_box = "warn"
wrong_self_convention = "warn"

doc_markdown = "allow"
expect_used = "allow"
explicit_iter_loop = "allow"
float-cmp = "allow"
format_push_string = "allow"
items_after_statements = "allow"
manual_string_new = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
should_panic_without_expect = "allow"
todo = "allow"
too_many_lines = "allow"
