[package]
name = "libshvproto-macros"
description = "Derive macros for libshvproto"
license = "MIT"
repository = "https://github.com/silicon-heaven/libshvproto-rs"
version = "0.2.2"
edition = "2021"

[lib]
name = "libshvproto_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"
